# langsearch

./: .readthedocs.yml  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  extending.rst  gathering_data.rst  index.rst  indexing_data.rst  installation.rst  introduction.rst  quickstart.rst
docs/source/examples/: audio.rst  image.rst  index.rst  other.rst
docs/source/pipelines/: audio.rst  html.rst  image.rst  index.rst  others.rst  plaintext.rst
examples/local_audio/: docker-compose.yml  webapp.py
examples/local_audio/deeprl_course/: scrapy.cfg
examples/local_audio/deeprl_course/deeprl_course/: items.py  middlewares.py  pipelines.py  settings.py
examples/local_audio/deeprl_course/deeprl_course/spiders/: crawler.py
examples/local_files/: docker-compose.yml
examples/local_files/langsearch_crawler/: scrapy.cfg
examples/local_files/langsearch_crawler/langsearch_crawler/: items.py  middlewares.py  pipelines.py  settings.py
examples/local_files/langsearch_crawler/langsearch_crawler/spiders/: crawler.py
examples/local_files/webapp/: Welcome.py
examples/local_files/webapp/pages/: Simple_QA_Demo.py
examples/local_images/: docker-compose.yml  webapp.py
examples/local_images/unsplash_nature/: scrapy.cfg
examples/local_images/unsplash_nature/unsplash_nature/: items.py  middlewares.py  pipelines.py  settings.py
examples/local_images/unsplash_nature/unsplash_nature/spiders/: crawler.py
examples/quickstart/: docker-compose.yml  webapp.py
examples/quickstart/langchain_qa/: scrapy.cfg
examples/quickstart/langchain_qa/langchain_qa/: items.py  middlewares.py  pipelines.py  settings.py
examples/quickstart/langchain_qa/langchain_qa/spiders/: crawler.py
langsearch/: exceptions.py  utils.py
langsearch/chains/: __init__.py  hyde.py  qa.py
langsearch/middlewares/: spidermiddlewares.py
langsearch/pipelines/: __init__.py  base.py  detect.py  dryrun.py
langsearch/pipelines/common/: index.py  inscriptis.py  language.py  python_readability.py  readability_js.py  storeitem.py  textsplitter.py  tika.py  trafilatura.py
langsearch/pipelines/common/mixins/: llm.py  weaviatedb.py
langsearch/pipelines/types/: assemble.py  enumerations.py
langsearch/pipelines/types/audio/: audiopipeline.py  whisper.py
langsearch/pipelines/types/html/: fix_html.py  htmlpipeline.py
langsearch/pipelines/types/image/: imageindex.py  imagepipeline.py  resize.py
langsearch/pipelines/types/other/: otherpipeline.py
langsearch/pipelines/types/plaintext/: plaintextpipeline.py
langsearch/pipelines/types/text/: html.py  textpipeline.py
langsearch/spiders/: __init__.py  filespider.py  webspider.py
