[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langsearch"
version = "0.1.1"
license = {text = "MIT License"}
authors = [
    {name = "Dibya Chakravorty", email = "dibyachakravorty@gmail.com"}
]
description = "Easily create semantic search based LLM applications on your own data"
readme = "README.md"
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
python-requires = ">=3.9"  # because of graphlib
dependencies = [
    "inscriptis==2.3.2",
    "langchain==0.0.101",
    "langdetect==1.0.9",
    "openai==0.27.0",
    "readability-lxml==0.8.1",
    "Scrapy==2.7.1",
    "tika==2.6.0",
    "tiktoken==0.1.2",
    "weaviate-client==3.11.0",
]

[project.optional-dependencies]
image = [
    "Pillow==9.4.0",
]
audio = [
    "openai-whisper==20230124",
]
extras = [
    "readabilipy==0.2.0",
    "trafilatura==1.4.1",
]
all = [
    "langsearch[image,audio,extras]"
]

[tool.hatch.build]
include = [
  "langsearch/*.py",
]
